swagger - added by name and by type requests
